Add Zimtschnecken recipe with cream cheese frosting
New global ingredients: frischkaese, puderzucker, zimt, hefe, mehl, zucker
Recipe includes section headers for Teig, Füllung, and Glasur.

--- a/data/ingredients.yaml
+++ b/data/ingredients.yaml
@@ -107,3 +107,15 @@ frischkaese:
   name: Frischkäse
   unit: g
   posthof: "45698:125,139403:125"
+
+# Eggs
+ei:
+  name: Ei
+  plural: Eier
+  posthof: "136922:1"
+
+# Liquids (misc)
+mineralwasser:
+  name: EL Mineralwasser
+  plural: EL Mineralwasser
+  posthof: "50335:1000"
