Add global ingredient alternatives feature
- Ingredients in data/ingredients.yaml can now define alternatives
- Format: alternatives: [{ref: "other-id", factor: 1.0}]
- When used in recipes, auto-renders as ingredient-choice dropdown
- Amount for alternative = original amount × factor
- Added zucker -> agavendicksaft as example alternative
- Updated CLAUDE.md documentation

--- a/data/ingredients.yaml
+++ b/data/ingredients.yaml
@@ -29,6 +29,9 @@ zucker:
   name: Zucker
   unit: g
   posthof: "50118:1000"
+  alternatives:
+    - ref: agavendicksaft
+      factor: 1.0
 
 agavendicksaft:
   name: Agavendicksaft
