Add popcorn recipes (sweet and salty) with snack category
- Add süßes Popcorn and salziges Popcorn recipes
- Create new Snack category with cover image
- Add Popcornmais ingredient with Posthof product
- Add frittieren method cover image
- Add unsplash-image.py helper script
- Update lint-ingredients.py

--- a/data/ingredients/02/04/01.yaml
+++ b/data/ingredients/02/04/01.yaml
@@ -10,3 +10,11 @@
     - id: 90921
       unit: 500
 
+2040100.popcornmais:
+  name: Popcornmais
+  plural: Popcornmais
+  unit: g
+  posthof:
+    - id: 90920
+      unit: 500
+
